--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -7,10 +7,16 @@ p {
   line-height: 1.75;
 }
 
+p + h1,
+p + h2,
+p + h3 {
+  margin-top: 1em;
+}
+
 h1,h2,h3 {
   font-family: "Playfair Display" serif;
   font-weight: normal;
-  margin-bottom: 0.3em;
+  margin-bottom: 0.6em;
 }
 
 h1 {
