Add children page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
       <ul>
         <li class="home"><a href="/">Home</a></li>
         <li class="services"><a href="/services">Services</a></li>
+        <li class="children"><a href="/children">For children and teenagers</a></li>
         <li class="about"><a href="/about">About</a></li>
         <li class="contact"><em><a href="/contact">Contact</a></em></li>
       </ul>
