Add areas of expertise to header.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,11 @@
   <header class="site-header">
     <a href="/">
       <h1>Dr Susanna Waern</h1>
-      <p>Clinical Neuropsychologist</p>
+      <p>Clinical Psychologist</p>
+      <p class="areas-of-expertise">
+      Paediatric Neuropsychology, Paediatrics, Children, Adolescents and
+      Families
+      </p>
     </a>
     <nav>
       <ul>
