Stop highlighting the contact navigation item.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <li class="services"><a href="/services">Services</a></li>
         <li class="children"><a href="/children">For children and teenagers</a></li>
         <li class="about"><a href="/about">About</a></li>
-        <li class="contact"><em><a href="/contact">Contact</a></em></li>
+        <li class="contact"><a href="/contact">Contact</a></li>
       </ul>
     </nav>
   </header>
