Change accent color to a teal hue.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -35,12 +35,12 @@ h3 {
 }
 
 a {
-  color: #BF2D1D;
+  color: #00B8B8;
 }
 
 a.button {
   color: white;
-  background: #BF2D1D;
+  background: #00B8B8;
   padding: 0.5em 0.75em;
   text-decoration: none;
 }
