Put areas of expertise on separate lines.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,9 @@
       <h1>Dr Susanna Waern</h1>
       <p>Clinical Psychologist</p>
       <p class="areas-of-expertise">
-      Paediatric Neuropsychology, Paediatrics, Children, Adolescents and
-      Families
+      Paediatric Neuropsychology<br>
+      Paediatrics<br>
+      Children, Adolescents and Families
       </p>
     </a>
   </div>
