--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -63,14 +63,14 @@ a.button {
 .site-header h1 {
   font: 2.5em "Playfair Display SC" serif;
   margin: 0.5em 0 0.25em 0;
-  text-align: right;
+  text-align: left;
 }
 
 .site-header p {
   font: 1.5em "Playfair Display SC" serif;
   line-height: 1;
   color: #666;
-  text-align: right;
+  text-align: left;
 }
 
 .site-header .areas-of-expertise {
