Put the navigation on the left side.
* Add bourbon and neat.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,20 +19,22 @@
       </p>
     </a>
   </div>
-  <nav>
-    <ul>
-      <li class="home"><a href="/">Home</a></li>
-      <li class="services"><a href="/services">Services</a></li>
-      <li class="children"><a href="/children">For children and teenagers</a></li>
-      <li class="about"><a href="/about">About</a></li>
-      <li class="contact"><a href="/contact">Contact</a></li>
-    </ul>
-  </nav>
 </header>
 
-<div class="page-content">
+<div class="site-main">
   <div class="wrapper">
-    {{ content }}
+    <nav>
+      <ul>
+        <li class="home"><a href="/">Home</a></li>
+        <li class="services"><a href="/services">Services</a></li>
+        <li class="children"><a href="/children">For children and teenagers</a></li>
+        <li class="about"><a href="/about">About</a></li>
+        <li class="contact"><a href="/contact">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="page-content">
+      {{ content }}
+    </div>
   </div>
 </div>
 
