--- a/_sass/home_page.scss
+++ b/_sass/home_page.scss
@@ -6,7 +6,7 @@
 .home-page .intro {
   font: 2em "Playfair Display" serif;
   text-align: center;
-  margin: 1em 0 2.5em 0;
+  margin: 0 0 2.5em 0;
 }
 
 .home-page .intro:before,
