--- a/_sass/site_header.scss
+++ b/_sass/site_header.scss
@@ -6,13 +6,13 @@
 .site-header h1 {
   font: 2.5em "Playfair Display SC" serif;
   margin: 0.5em 0 0.25em 0;
+  line-height: 0.9;
   text-align: left;
 }
 
 .site-header p {
-  font: 1.5em "Playfair Display SC" serif;
+  font: 2em "Playfair Display SC" serif;
   line-height: 1;
-  color: #666;
   text-align: left;
   margin-top: 0;
 }
