--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,10 @@
       <ul>
         <li class="home"><a href="/">Home</a></li>
         <li class="services"><a href="/services">Services</a></li>
-        <li class="children"><a href="/children">For children and teenagers</a></li>
+        <li class="young-people"><a href="/information-for-young-people">Information for Young People</a></li>
         <li class="about"><a href="/about">About</a></li>
+        <li class="appointments"><a href="/appointments-and-fees">Appointments and Fees</a></li>
+        <li class="resources"><a href="/resources-and-links">Resources and links</a></li>
         <li class="contact"><a href="/contact">Contact</a></li>
       </ul>
     </nav>
