--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -47,3 +47,16 @@ a.button {
   padding: 0.5em 0.75em;
   text-decoration: none;
 }
+
+blockquote {
+  margin: 0;
+  font-style: italic;
+}
+
+blockquote + p {
+  margin-top: 0.5em;
+}
+
+ul li {
+  margin: 2em 0;
+}
