Highlight active navigation item.

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,2 +1,4 @@
-$accent-color: #00B8B8;
-$navigation-background-color: tint($accent-color, 95%);
+$accent-color-one: #5cc4b4;
+$accent-color-two: #ff9885;
+$navigation-background-color: $accent-color-one;
+$navigation-active-background-color: $accent-color-two;
