--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -38,12 +38,12 @@ h3 {
 }
 
 a {
-  color: $accent-color;
+  color: $accent-color-one;
 }
 
 a.button {
   color: white;
-  background: $accent-color;
+  background: $accent-color-one;
   padding: 0.5em 0.75em;
   text-decoration: none;
 }
