--- a/_sass/home_page.scss
+++ b/_sass/home_page.scss
@@ -7,54 +7,54 @@
   }
 }
 
-.home-page .intro {
+.home .intro {
   font: 2em "Playfair Display" serif;
   text-align: center;
   margin: 0 0 2.5em 0;
 }
 
-.home-page .intro:before,
-.home-page .intro:after {
+.home .intro:before,
+.home .intro:after {
   content: " ";
   display: table;
 }
 
-.home-page .intro:after {
+.home .intro:after {
   clear: both;
 }
 
-.home-page .intro img {
+.home .intro img {
   float: left;
   width: 35%;
 }
 
-.home-page .intro p {
+.home .intro p {
   float: left;
   width: 60%;
   margin: 0.4em 5% 0 0;
   text-align: left;
 }
 
-.home-page section.services,
-.home-page section.young-people,
-.home-page section.about {
+.home section.services,
+.home section.young-people,
+.home section.about {
   width: 30%;
   margin: 0 5% 0 0;
   float: left;
 }
 
-.home-page section.about {
+.home section.about {
   margin: 0;
 }
 
 @media only screen and (max-width: 700px) {
-  .home-page .intro img {
+  .home .intro img {
     float: none;
     width: 70%;
     margin: 0 0 1em 0;
   }
 
-  .home-page .intro p {
+  .home .intro p {
     float: none;
     text-align: inherit;
     width: 100%;
@@ -62,9 +62,9 @@
     font-size: 0.75em;
   }
 
-  .home-page section.services,
-  .home-page section.young-people,
-  .home-page section.about {
+  .home section.services,
+  .home section.young-people,
+  .home section.about {
     width: 100%;
     margin: 0;
     float: none;
