Use Droid Sans everywhere.

--- a/_sass/site_header.scss
+++ b/_sass/site_header.scss
@@ -4,14 +4,14 @@
 }
 
 .site-header h1 {
-  font: 2.5em "Playfair Display SC" serif;
+  font-size: 2.5em;
   margin: 0.5em 0 0.25em 0;
   line-height: 0.9;
   text-align: left;
 }
 
 .site-header p {
-  font: 2em "Playfair Display SC" serif;
+  font-size: 2.3em;
   line-height: 1;
   text-align: left;
   margin-top: 0;
