--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 <title>{{ site.title }}</title>
 
-<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Playfair+Display:400,400italic|Playfair+Display+SC' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
 </head>
 <body class="{{ page.body_class }}">
