Split up the Services page.

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,5 +1,6 @@
 $accent-color-one: #5cc4b4;
 $accent-color-two: #ff9885;
 $navigation-background-color: $accent-color-one;
+$sub-navigation-background-color: tint($accent-color-one, 50%);
 $navigation-active-background-color: $accent-color-two;
 $featured-background-color: tint($accent-color-one, 90%);
