--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li class="home"><a href="/">Home</a></li>
-        <li class="services"><a href="/services">Services</a></li>
+        <li class="services"><a href="/services/paediatrics">Services</a></li>
         <li class="young-people"><a href="/information-for-young-people">Information for Young People</a></li>
         <li class="about"><a href="/about">About</a></li>
         <li class="appointments"><a href="/appointments-and-fees">Appointments and Fees</a></li>
