Ensure navigation items are not broken weirdly.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,10 @@
       <ul>
         <li class="home"><a href="/">Home</a></li>
         <li class="services"><a href="/services/paediatrics">Services</a></li>
-        <li class="young-people"><a href="/information-for-young-people">Information for Young People</a></li>
-        <li class="about"><a href="/about">About</a></li>
-        <li class="appointments"><a href="/appointments-and-fees">Appointments and Fees</a></li>
-        <li class="resources"><a href="/resources-and-links">Resources and links</a></li>
+        <li class="young-people"><a href="/information-for-young-people">Information for Young&nbsp;People</a></li>
+        <li class="about"><a href="/about">About Dr&nbsp;Susanna&nbsp;Waern</a></li>
+        <li class="appointments"><a href="/appointments-and-fees">Appointments and&nbsp;Fees</a></li>
+        <li class="resources"><a href="/resources-and-links">Resources and&nbsp;links</a></li>
         <li class="contact"><a href="/contact">Contact</a></li>
       </ul>
     </nav>
