Update footer and contact information.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,9 @@
 <footer class="site-footer">
   <div class="wrapper">
     <p>
-    {{ site.address }}.
-    <a href="tel:{{ site.phone }}">Call {{ site.phone }}</a> or email
-    <a href="mailto:{{ site.email }}">{{ site.email }}</a>.
+    {{ site.name }} |
+    <a href="tel:{{ site.phone }}">{{ site.phone }}</a> |
+    <a href="mailto:{{ site.email }}">{{ site.email }}</a>
     </p>
   </div>
 </footer>
