Tweak navigation styles.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,9 @@
       <h1>Dr Susanna Waern</h1>
       <p>Clinical Psychologist</p>
     </a>
-    <nav>
+  </div>
+  <nav>
+    <div class="wrapper">
       <ul>
         <li class="home"><a href="/">Home</a></li>
         <li class="services"><a href="/services/paediatrics">Services</a></li>
@@ -23,8 +25,8 @@
         <li class="resources"><a href="/resources-and-links">Resources and&nbsp;links</a></li>
         <li class="contact"><a href="/contact">Contact</a></li>
       </ul>
-    </nav>
-  </div>
+    </div>
+  </nav>
 </header>
 
 <div class="site-main">
