--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<div class="wrapper">
-  <nav>
+<nav>
+  <div class="wrapper">
     <ul>
       <li class="paediatrics"><a href="/services/paediatrics">Paediatrics</a></li>
       <li class="neuropsychology"><a href="/services/neuropsychology">Neuropsychology</a></li>
@@ -12,7 +12,9 @@ layout: default
       <li class="parenting"><a href="/services/parenting">Parenting</a></li>
       <li class="consultation-and-teaching"><a href="/services/consultation-and-teaching">Consultation and Teaching</a></li>
     </ul>
-  </nav>
+  </div>
+</nav>
 
+<div class="wrapper">
   {{ content }}
 </div>
