--- a/_sass/site_main.scss
+++ b/_sass/site_main.scss
@@ -1,12 +1,14 @@
 .site-main nav {
+  background: $sub-navigation-background-color;
   margin-top: -2em;
+  margin-bottom: 2em;
+  border-bottom: 1px solid $navigation-border-color;
 
   ul {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 0 0 -1px 0;
     display: table;
-    border-spacing: 0.2em;
     width: 100%;
   }
 
@@ -14,7 +16,6 @@
     width: 100% / 6;
     display: table-cell;
     vertical-align: middle;
-    background: $sub-navigation-background-color;
   }
 
   a {
@@ -33,5 +34,7 @@ body.assessments .site-main nav li.assessments,
 body.therapies .site-main nav li.therapies,
 body.parenting .site-main nav li.parenting,
 body.consultation-and-teaching .site-main nav li.consultation-and-teaching {
-  background: $navigation-active-background-color;
+  background: $sub-navigation-active-background-color;
+  border: 1px solid $sub-navigation-active-border-color;
+  border-top: none;
 }
