--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,5 +1,7 @@
 $accent-color-one: #5cc4b4;
 $accent-color-two: #ff9885;
+$body-background-color: tint($accent-color-one, 95%);
+$body-font-color: shade($accent-color-one, 50%);
 $navigation-background-color: $accent-color-one;
 $navigation-border-color: shade($navigation-background-color, 20%);
 $navigation-active-background-color: $accent-color-two;
@@ -8,4 +10,4 @@ $sub-navigation-background-color: tint($accent-color-one, 50%);
 $sub-navigation-border-color: shade($sub-navigation-background-color, 20%);
 $sub-navigation-active-background-color: tint($accent-color-two, 50%);
 $sub-navigation-active-border-color: shade($sub-navigation-active-background-color, 20%);
-$featured-background-color: tint($accent-color-one, 90%);
+$featured-background-color: tint($accent-color-one, 70%);
