--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
 <head>
 <title>{{ site.title }}</title>
 
-<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
 </head>
 <body class="{{ page.body_class }}">
 <header class="site-header">
   <div class="wrapper">
-    <a href="/">
+    <a href="/" class="logo">
       <h1>Dr Susanna Waern</h1>
       <p>Clinical Psychologist</p>
     </a>
