--- a/_sass/site_header.scss
+++ b/_sass/site_header.scss
@@ -3,18 +3,25 @@
   text-align: center;
 }
 
-.site-header h1 {
-  font-size: 2.5em;
-  margin: 0.5em 0 0.25em 0;
-  line-height: 0.9;
-  text-align: left;
-}
 
-.site-header p {
-  font-size: 2.3em;
-  line-height: 1;
-  text-align: left;
-  margin-top: 0;
+.site-header .logo {
+  float: left;
+
+  h1 {
+    font-size: 2.5em;
+    font-family: "Droid Serif";
+    margin: 0.5em 0 0.25em 0;
+    line-height: 0.9;
+    padding-bottom: 0.1em;
+    border-bottom: 0.05em solid $body-font-color;
+  }
+
+  p {
+    font-size: 2em;
+    font-family: "Droid Serif";
+    line-height: 1;
+    margin-top: 0;
+  }
 }
 
 .site-header a {
