--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -16,6 +16,7 @@ p + h3 {
 h1,h2,h3 {
   font-weight: normal;
   margin-bottom: 0.5em;
+  font-family: "Droid Serif";
 
   &:first-child {
     margin-top: 0;
