Titlecase Resources and Links.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <li class="young-people"><a href="/information-for-young-people">Information for Young&nbsp;People</a></li>
         <li class="about"><a href="/about">About Dr&nbsp;Susanna&nbsp;Waern</a></li>
         <li class="appointments"><a href="/appointments-and-fees">Appointments and&nbsp;Fees</a></li>
-        <li class="resources"><a href="/resources-and-links">Resources and&nbsp;links</a></li>
+        <li class="resources"><a href="/resources-and-links">Resources and&nbsp;Links</a></li>
         <li class="contact"><a href="/contact">Contact</a></li>
       </ul>
     </div>
