--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -13,6 +13,10 @@ p + h3 {
   margin-top: 2em;
 }
 
+.footnote {
+  font-size: 0.8em;
+}
+
 h1,h2,h3 {
   font-weight: normal;
   margin-bottom: 0.5em;
