--- a/_sass/site_header.scss
+++ b/_sass/site_header.scss
@@ -6,11 +6,12 @@
 
 .site-header .logo {
   float: left;
+  margin-bottom: 1em;
 
   h1 {
     font-size: 2.5em;
     font-family: "Droid Serif";
-    margin: 0.5em 0 0.25em 0;
+    margin: 0 0 0.25em 0;
     line-height: 0.9;
     padding-bottom: 0.1em;
     border-bottom: 0.05em solid $body-font-color;
