Add HCPC and BPS logos.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,8 @@
     {{ site.name }} |
     <a href="tel:{{ site.phone }}">{{ site.phone }}</a> |
     <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+    <a href="http://www.hpc-uk.org"><img src="/images/hcpc.jpg" alt="HCPC Registered"></a>
+    <a href="http://www.bps.org.uk"><img src="/images/bps.jpg" alt="BPC Chartered Psychologist"></a>
     </p>
   </div>
 </footer>
