--- a/_sass/site_footer.scss
+++ b/_sass/site_footer.scss
@@ -1,6 +1,16 @@
 .site-footer {
-  margin: 4em 0 1em 0;
-  font-size: 0.8em;
+  margin: 2em 0 1.5em 0;
   color: #666;
-  text-align: center;
+  text-align: left;
+}
+
+.site-footer p {
+  @include clearfix;
+  font-size: 0.8em;
+}
+
+.site-footer img {
+  float: right;
+  height: 6em;
+  margin-left: 1em;
 }
