Link services to the first page under assessments.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <ul>
         <li class="home"><a href="/">Home</a></li>
-        <li class="services"><a href="/services/paediatrics">Services</a></li>
+        <li class="services"><a href="/services/assessments">Services</a></li>
         <li class="young-people"><a href="/information-for-young-people">Information for Young&nbsp;People</a></li>
         <li class="about"><a href="/about">About Dr&nbsp;Susanna&nbsp;Waern</a></li>
         <li class="appointments"><a href="/appointments-and-fees">Appointments and&nbsp;Fees</a></li>
