Darken featured links to increase contrast.

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -11,3 +11,4 @@ $sub-navigation-border-color: shade($sub-navigation-background-color, 20%);
 $sub-navigation-active-background-color: tint($accent-color-two, 50%);
 $sub-navigation-active-border-color: shade($sub-navigation-active-background-color, 20%);
 $featured-background-color: $sub-navigation-background-color;
+$featured-link-color: darken($accent-color-one, 20%);
